--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@supabase/supabase-js": "^2.58.0",
+    "@types/react-native": "^0.72.8",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "expo": "~54.0.10",
@@ -36,7 +37,7 @@
     "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.1",
